--- a/pom.xml
+++ b/pom.xml
@@ -102,20 +102,37 @@
 				<artifactId>coveralls-maven-plugin</artifactId>
 				<version>4.3.0</version>
 				<configuration>
-					<repoToken>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</repoToken>
+					<repoToken>9GSk7zPqRGqGL5RpLzd2Hz9O78SEX8fvB</repoToken>
 				</configuration>
 			</plugin>
 
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>cobertura-maven-plugin</artifactId>
-				<version>2.7</version>
+				<groupId>org.jacoco</groupId>
+				<artifactId>jacoco-maven-plugin</artifactId>
 				<configuration>
-					<format>xml</format>
-					<maxmem>256m</maxmem>
-					<!-- aggregated reports for multi-module projects -->
-					<aggregate>true</aggregate>
+					<excludes>
+						<exclude>com/bootcamp/challenge/model/*</exclude>
+						<exclude>com/bootcamp/challenge/utils/*</exclude>
+						<exclude>com/bootcamp/challenge/ChallengeApplication.class</exclude>
+						<exclude>**/config/*</exclude>
+					</excludes>
 				</configuration>
+				<version>0.8.4</version>
+				<executions>
+					<execution>
+						<id>default-prepare-agent</id>
+						<goals>
+							<goal>prepare-agent</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>jacoco-report</id>
+						<phase>test</phase>
+						<goals>
+							<goal>report</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
